--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,14 @@
   <meta charset="utf-8">
   <title>Quản lí tài chính</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/assets/vendor/uikit/css/uikit.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
   <script src="/assets/vendor/uikit/js/uikit.min.js"></script>
   <script src="/assets/vendor/uikit/js/uikit-icons.min.js"></script>
-  
 </head>
 <body>
   <app-root></app-root>
-  
 </body>
 </html>
