--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Quản lí tài chính</title>
-  <base href="/">
+  <script>
+    document.write('<base href="' + document.location + '" />');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="/assets/vendor/uikit/css/uikit.min.css" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
-  <script src="/assets/vendor/uikit/js/uikit.min.js"></script>
-  <script src="/assets/vendor/uikit/js/uikit-icons.min.js"></script>
+  <link rel="stylesheet" href="assets/vendor/uikit/css/uikit.min.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <script src="assets/vendor/uikit/js/uikit.min.js"></script>
+  <script src="assets/vendor/uikit/js/uikit-icons.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
